# flight_reader

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deployment/: .env.example  docker-compose.yaml
deployment/db-init/: 001_map_regions.sql  001_schema.sql
deployment/k8s/: flight-reader.yaml  keycloak.yaml  regions-import-job.yaml
deployment/scripts/: import_regions.sh  install_flight_reader_service.sh  kind-sync-regions.sh  region_aliases.sql  supplemental_regions.geojson
docs/: setup-arch.md  setup-ubuntu.md
src/flight_reader/: db.py  db_models.py  settings.py
src/flight_reader/api/: __main__.py  auth.py  schemas.py  security.py
src/flight_reader/api/routers/: analytics.py  flights.py  health.py  map.py  schemas.py  uploads.py
src/flight_reader/services/: import_shr.py
src/parser/: one_msg.txt  parser.py
