[project]
name = "flight-reader"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "uvicorn",
  "pydantic",
  "pydantic-settings>=2.3",
  "fastapi",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.scripts]
frun = "flight_reader.api.__main__:run"
