[project]
name = "flight-reader"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "uvicorn",
    "pydantic",
    "pydantic-settings>=2.3",
    "fastapi",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "geoalchemy2>=0.14",
    "shapely>=2.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
]

[project.scripts]
frun = "flight_reader.api.__main__:run"
